--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
     "name": "Sat",
     "version": "0.0.1",
     "dependencies": {
+        "jquery"        : "*",
         "three.js"      : "*"
     }
 }
